--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@apollo/client": "^3.7.15",
     "@stripe/stripe-js": "^1.54.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.3.1",
     "graphql": "^16.6.0",
     "happy-dom": "^9.20.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.11.2",
-    "vitest": "^1.4.0"
+    "redux": "^5.0.1",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
